v6.45
  - added '-c' flag to display changelog.
  - changed '-s' flag to '-p'.
  - fixed problem with parsing header.
  - track auto parsing progress.
  - fixed progress errors.
  - updated strings in help.
  - display help when when flag is invalid.
  - display changelog after update & install.

v6.50
  - fixed unary operator bug when parsing a wrong URL.
  - improved connection error detection.
  - workaround truncate error for mac.
  - fixed read flag error for mac.
  - added double quotes to prevent errors.

v6.55
  - changed '-u' flag for uninstall to '-d'
  - added '-u' flag to check for updates.
  - auto update check.